--- a/react_AI_chatbot/src/index.css
+++ b/react_AI_chatbot/src/index.css
@@ -3,9 +3,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color:#0d0d0d;
-  background:#f3f3f3;
+  /* color-scheme: light dark; */
+  color: #0d0d0d;
+  background: #f3f3f3;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,7 +13,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-*{
+* {
   box-sizing: border-box;
 }
 
